2007-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-session.el (w3m-session-save, w3m-session-select): Use mapc
	instead of mapcar.

2007-09-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el: Changes to stricten entities decoded by
	`w3m-decode-entities'.
	(w3m-entity-table, w3m-entity-reverse-table): New constants.
	(w3m-entity-regexp): Stricten.
	(w3m-entity-alist, w3m-entity-db, w3m-entity-db-size): Abolished.
	(w3m-entity-value, w3m-decode-entities, w3m-decode-entities-string,
	w3m-encode-specials-string): Rewritten to use the above constants.

2007-09-21  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* doc/ptexinfmt.el: Support @fonttextsize, @textdegree.

2007-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Rewrite.
	(w3m): Always call it; set the 2nd arg new-session when Emacs 21 or
	XEmacs runs in the batch mode.

2007-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-examine-command-line-args): Inhibit Emacs head from
	displaying startup screen when emacs-w3m runs in the batch mode;
	improve parsing of arguments.

2007-09-13  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-expand-path-name): Save the matched data surely.

2007-09-09  Naohiro Aota  <nao.aota@gmail.com>

	* w3m.el (w3m-expand-url): Use "/" as path when it of base-uri is not
	defined; Clear query of base-uri when empty query exist; Changes to
	follow RFC3986.

2007-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-euc-japan-encoder, w3m-iso-latin-1-encoder): Use
	mule-version to decide whether to redefine them.

	* w3m.el: Use emacs-version instead of emacs-major-version to show the
	version of Emacs that emacs-w3m doesn't support.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-local-file-type): Regard news:* urls as text/html.
	(w3m-w3m-retrieve): Return nil if retrieving failed.
	(w3m-show-error-information): Improve error message for news:* urls.

2007-09-03  Katsumi Yamaoka  <yamaoka@jpl.org>
